Add 'Rainbow Mode'

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="flex content-center items-center"><b class="f-4">Etch-a-Sketch!</b></header>
     <main class="flex grow-1 items-center">
         <aside class="grow-2 flex flex-col items-center g-12">
+            <button class="bg-dark p-4" onclick="rainbowMode()" id="rainbow">Rainbow mode</button>
             <div>
                 <label for="range">Select grid size:&nbsp;</label>
                 <select name="range" id="range" class="bg-dark p-4">
